Feature: Add welcome paragraph

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Same Webpage</title>
 </head>
 <body>
-	<h1>H1 Header</h2>
+	<h1>Dummy Webpage</h2>
+	<p> Hello, welcome to this dummy webpage, we are glad to have you here</p>
 </body>
 </html>
