added another paragraph content

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html>
+<
+html>
 <head>
 	<title>Same Webpage</title>
 </head>
 <body>
 	<h1>Dummy Webpage</h2>
 	<p> Hello, welcome to this dummy webpage, we are glad to have you here</p>
-</body>
-</html>
+<div> <p>Say No More!</p> <p>hiya!</p></div> </body> </html>
